docs/k8s/examples/downward-api-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: downward
spec:
  container:
  - name: main
    image: busybox
    command: ["sleep", "999999"]
    resources:
      requests:
        cpu: 15m
        memory: 100Ki
      limits:
        cpu: 15m
        memory: 4Mi
