docs/k8s/examples/example.pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2021-05-27T06:49:09Z"
  generateName: basicdata-
  labels:
    app: basicdata
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:generateName: {}
        f:labels:
          .: {}
          f:app: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"93778bb7-e4b9-46ed-b1f0-6d0ee1f97d3d"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        f:containers:
          k:{"name":"basicdata"}:
            .: {}
            f:image: {}
            f:imagePullPolicy: {}
            f:name: {}
            f:ports:
              .: {}
              k:{"containerPort":9000,"protocol":"TCP"}:
                .: {}
                f:containerPort: {}
                f:protocol: {}
            f:resources: {}
            f:terminationMessagePath: {}
            f:terminationMessagePolicy: {}
        f:dnsPolicy: {}
        f:enableServiceLinks: {}
        f:restartPolicy: {}
        f:schedulerName: {}
        f:securityContext: {}
        f:terminationGracePeriodSeconds: {}
    manager: kube-controller-manager
    operation: Update
    time: "2021-05-27T06:49:09Z"
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:conditions:
          k:{"type":"ContainersReady"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Initialized"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
          k:{"type":"Ready"}:
            .: {}
            f:lastProbeTime: {}
            f:lastTransitionTime: {}
            f:status: {}
            f:type: {}
        f:containerStatuses: {}
        f:hostIP: {}
        f:phase: {}
        f:podIP: {}
        f:podIPs:
          .: {}
          k:{"ip":"10.1.0.94"}:
            .: {}
            f:ip: {}
        f:startTime: {}
    manager: kubelet
    operation: Update
    time: "2021-05-27T06:49:16Z"
  name: basicdata-8znt9
  namespace: default
  ownerReferences:
  - apiVersion: v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicationController
    name: basicdata
    uid: 93778bb7-e4b9-46ed-b1f0-6d0ee1f97d3d
  resourceVersion: "11151"
  selfLink: /api/v1/namespaces/default/pods/basicdata-8znt9
  uid: 21c8c68a-13fc-4aca-b2bd-b9f892dd0208
spec:
  containers:
  - image: basicdata:latest
    imagePullPolicy: IfNotPresent
    name: basicdata
    ports:
    - containerPort: 9000
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-pp7qs
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: docker-desktop
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-pp7qs
    secret:
      defaultMode: 420
      secretName: default-token-pp7qs
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-05-27T06:49:09Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-05-27T06:49:16Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-05-27T06:49:16Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-05-27T06:49:09Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://27001e7c5bff3a94307adddec4c298972b9d664ff3d27ca4770ee599d9d42bd8
    image: basicdata:latest
    imageID: docker://sha256:7b5b924183c0dcb26a8661fe3ada18b19e50d3abb80721babc4dc836e5a323c1
    lastState: {}
    name: basicdata
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2021-05-27T06:49:15Z"
  hostIP: 192.168.65.4
  phase: Running
  podIP: 10.1.0.94
  podIPs:
  - ip: 10.1.0.94
  qosClass: BestEffort
  startTime: "2021-05-27T06:49:09Z"
