docs/k8s/examples/pod-with-private-image.yml
apiVersion: v1
kind: Pod
metadata:
  name: private-pod
spec:
  imagePullSecrets:
  - name: mydockerhubsecret
  containers:
  - image: marsonshine/basicdata:private
    name: main
