docs/k8s/examples/ssd-monitor-daemondset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ssd-monitor
spec:
  selector:
    matchLabels:
      app: ssd-monitor
  template:
    metadata:
      labels:
        app: ssd-monitor
    spec:
      nodeSelector:
        disk: ssd # 节点选择器，选择 disk=ssd 标签的节点
      containers:
      - name: main
        image: luksa/ssd-monitor
