docs/k8s/examples/basicdata-multi-port-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: basicdata-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9000
  - name: https
    port: 443
    targetPort: 8443
  selector: # 选择标签为 app=basicdata 的 pod 为该服务
    app: basicdata
