docs/k8s/examples/basicdata-svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: basicdata-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 9001
    targetPort: 9000
  selector:
    app: basicdata
