docs/k8s/examples/basicdata-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: basicdata-svc
spec:
  ports:
  - port: 80
    targetPort: 9000
  selector: # 选择标签为 app=basicdata 的 pod 为该服务
    app: basicdata
