docs/k8s/examples/service.yml
apiVersion: v1
kind: Service
metadata:
  name: basicdata-service
spec:
  # selector:
  #   app: basicdata
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
